Downgrade to Java 8 (#98)
We can downgrade to Java 8+ quite easily (just give up on j.n.h.HttpClient and some sugar). OTOH, we cannot give up Maven 3.9+ runtime requirement (we need Resolver Checksum API from 1.9 that is present in Maven 3.9).

The reason why I opted to shade/relocate whole ASF httpClient suite (httpcore, httpclient, httpmime) to be for sure independent from Maven Core that contains core and client, but not mime. On the other hand, these three must be aligned.